fixing css spacing

--- a/main.css
+++ b/main.css
@@ -72,10 +72,11 @@ select option {
 }
 
 .audioControls {
-	width: 238px;
+	width: 242px;
     background: rgba(0,0,0,.2);
     padding: 12px;
     box-shadow: -3px 3px 2px rgba(0,0,0,.3);
+    margin-bottom: 20px;
 }
 
 .progress {
